--- a/DAC-001_Intro_To_Python/DAC_001_Intro_to_Python_Blank_Session2.ipynb
+++ b/DAC-001_Intro_To_Python/DAC_001_Intro_to_Python_Blank_Session2.ipynb
@@ -44,13 +44,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "T6-IOUm20YP4"
@@ -169,7 +162,7 @@
         "if email is None:\n",
         "    print(\"User has no email\")\n",
         "else:\n",
-        "    print(\"Email Addess is: \", email)\n",
+        "    print(\"Email Address is: \", email)\n",
         "\n",
         "\n",
         "\n"
@@ -794,13 +787,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": 37,
       "metadata": {
         "colab": {
@@ -1351,13 +1337,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "FH0YSenB0YP5"
@@ -1384,6 +1363,17 @@
           "text": [
             "Question: Is the world screwed?\n",
             "Magic 8-Ball says: My sources say no\n"
+          ]
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+            "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+            "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+            "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
           ]
         }
       ],
