--- a/DAC-001_Intro_To_Python/DAC-001-Intro-to-Python-Tutorial.ipynb
+++ b/DAC-001_Intro_To_Python/DAC-001-Intro-to-Python-Tutorial.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -68,19 +68,8 @@
      "output_type": "stream",
      "text": [
       "('physics', 'chemistry', 'english', 'math', 'biology')\n",
-      "['physics', 'chemistry', 'english', 'math', 'biology', 'literature']\n",
-      "5\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "('physics', 'chemistry', 'english', 'math', 'biology', 'literature')\n",
+      "6\n"
      ]
     }
    ],
@@ -92,11 +81,11 @@
     "#(b)\n",
     "subjects_list = list(subjects)\n",
     "subjects_list.append(\"literature\")\n",
-    "print(subjects_list)   #unable to append to tuple directly, will have to turn tuple into list to append\n",
+    "subjects = tuple(subjects_list)\n",
+    "print(subjects)   #unable to append to tuple directly, will have to turn tuple into list to append and turn back into tuple\n",
     "\n",
     "#(c)\n",
-    "subjects_tuple_length = len(subjects)\n",
-    "print(subjects_tuple_length)"
+    "print(len(subjects))"
    ]
   },
   {
@@ -261,24 +250,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Area: 50.272\n",
-      "Circumference: 25.136\n"
+      "Area: 50.26548245743669\n",
+      "Circumference: 25.132741228718345\n"
      ]
     }
    ],
    "source": [
+    "import math \n",
+    "\n",
     "def circle_properties(radius):\n",
-    "    area = 3.142*radius**2\n",
-    "    circumference = 2*3.142*radius\n",
+    "    area = math.pi*radius**2\n",
+    "    circumference = 2*math.pi*radius\n",
     "    return area, circumference \n",
     "\n",
+    "#example usage\n",
     "radius = 4\n",
     "area, circumference = circle_properties(radius)\n",
     "print(f\"Area: {area}\")\n",
