--- a/DAC-006_Machine_Learning/DAC-006-Intro_to_ML_Tutorial.ipynb
+++ b/DAC-006_Machine_Learning/DAC-006-Intro_to_ML_Tutorial.ipynb
@@ -27,6 +27,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "given the model that yo uhave generated using the classiers (random forest,), why did you choose the specific model present \n",
+    "is it because of precision score, accuracy score, t score, f1 score"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -50,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
